# task_classifier_rd

./: .augmentignore  .coveragerc  .gitignore  .projlist  Makefile  README.md  ai-checks.yaml  app.py  dataset_io.py  interfaces.py  models.py  pyproject.toml  pysum  requirements.txt  research_ai_classify.py  schema.sql  services.py  test_dataset_operations.py
.streamlit/: config.toml
data/batches/: need-tools_batch.json
data/datasets/example/: unified_tasks.txt
data/datasets/home_renovation/: dataset.yaml  inbox_tasks.txt  projects.txt  reference_tasks.txt  seed_data.sql
data/datasets/home_renovation2/: inbox_tasks.txt  projects.txt  reference_tasks.txt
data/datasets/personal_productivity/: inbox_tasks.txt  projects.txt  reference_tasks.txt
data/datasets/test01/: dataset.yaml
data/datasets/todoist/: dataset.yaml
data/prompts/: base01.md
doc/: 00-how-to-read-this.md  01-system-context.md  02-data-model.md  architecture.md  diagram.md  gtd.md  principles_dx.md  principles_tests.md  principles_usecases.md  rd_spec.md  usage.md  usecases.md  user_scenarios.md
doc/adr/: 001-state-management.md  002-multi-dataset-support.md  03-polymorphic-architecture.md
doc/features/: f00-system.md  f01-capture-clarify.md  f02-organize-review.md  f04-coach.md
doc/spec/: 01-system-context.md  02-data-model.md  03-architecture.md  04-usecases.md  triage-view.md
doc/spec/features/: f01-capture-clarify.md  f02-organize-review.md  f03-engage.md  f04-coach.md
models/: __init__.py  ai_schemas.py  dtos.py  entities.py  models.py
pages/: consistency_test.py  projects.py  shopping_view.py  uc011.py
scripts/: setup-hooks.sh
services/: __init__.py  analytics_service.py  commands.py  db_models.py  decorators.py  projectors.py  repository.py  services.py  snapshot_service.py  sqlite_repository.py
specs/: 00-context.md  01-features.md  02-flows.md  03-data-model.md  04-decisions.md
test_framework/: automated_testing.py  test_scenarios.py
tests/: conftest.py  mocks.py  test_commands.py  test_commands_fidelity.py  test_dataset_io.py  test_domain_model.py  test_e2e_workflow.py  test_e2e_workflows.py  test_execution_logic.py  test_mutant_killers.py  test_persistence.py  test_planning_and_execution.py  test_projectors.py  test_prompt_builder.py  test_repository_fidelity.py  test_repository_logic.py  test_repository_tdd.py  test_robustness.py  test_services.py  test_services_integration.py  test_services_logic.py  test_snapshot_service.py  test_sqlite_repository.py  test_tag_resolution.py  test_triage_and_repo.py
views/: coach_view.py  common.py  components.py  execution_view.py  planning_view.py  projects.py  shopping_view.py  triage_view.py
