[project]
name = "task-classifier-rd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "streamlit>=1.52.1",
    "todoist-api-python>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=services",
    "--cov=models", 
    "--cov=pages",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-config=.coveragerc"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
