[project]
name = "task-classifier-rd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "hypothesis>=6.148.7",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "todoist-api-python>=3.1.0",
]

[dependency-groups]
dev = [
    "mutmut>=3.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::ResourceWarning"
]

minversion = "6.0"
addopts = [
    "--cov=services",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-config=.coveragerc"
]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.mutmut]
paths_to_mutate = ["models/", "services/", "interfaces.py"]
tests_dir = ["tests/"]
pytest_add_cli_args = ["-x", "-q", "-p", "no:cov", "--override-ini=addopts="]
debug=true